# mc-alpha-server_cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.cpp  plan.md  test_chunk_players.cpp
build_release/: alpha_server
build_release/world/world/db/: 000009.ldb  000010.ldb  000012.ldb  LOG  LOG.old  MANIFEST-000006
docs/: world_storage.md
rust/: README.md
rust/alpha_bridge/: Cargo.toml  alpha_bridge.h
rust/alpha_bridge/src/: biome.rs  block.rs  caves.rs  chunk_loader.rs  commands.rs  density.rs  generator.rs  inventory.rs  lib.rs  nbt.rs  network.rs  noise.rs  pathfinder.rs  random.rs  tile_entity_chest.rs  tile_entity_furnace.rs  tile_entity_sign.rs
rust/alpha_bridge/src/decorators/: misc.rs  mod.rs  ores.rs  trees.rs
src/: MinecraftServer.cpp  MinecraftServer.h  forward.h  main.cpp
src/block/: Block.cpp  Block.h  BlockChest.cpp  BlockChest.h  BlockContainer.cpp  BlockContainer.h  BlockFire.h  BlockFurnace.cpp  BlockFurnace.h  BlockSign.cpp  BlockSign.h
src/core/: AxisAlignedBB.h  IInventory.h  InventoryPlayer.h  Item.cpp  Item.h  ItemStack.h  JavaRandom.h  Logger.cpp  Logger.h  Material.cpp  Material.h  MathHelper.h  NBT.h  NibbleArray.h  PropertyManager.h  RustBridge.cpp  RustBridge.h  ServerConstants.h  Vec3D.h
src/entity/: Entity.cpp  Entity.h  EntityAnimals.h  EntityArrow.h  EntityBoat.h  EntityCreature.h  EntityFallingSand.h  EntityItem.h  EntityLiving.h  EntityMobs.h  EntityPlayerMP.cpp  EntityPlayerMP.h  EntityTracker.cpp  EntityTracker.h
src/network/: NetHandler.h  NetLoginHandler.cpp  NetLoginHandler.h  NetServerHandler.cpp  NetServerHandler.h  NetworkListenThread.cpp  NetworkListenThread.h  NetworkManager.h  Packet.cpp  Packet.h
src/network/packets/: AllPackets.h  Packet59ComplexEntity.h
src/server/: ItemInWorldManager.cpp  ItemInWorldManager.h  ServerConfigurationManager.cpp  ServerConfigurationManager.h
src/world/: Chunk.cpp  Chunk.h  ChunkLoader.h  TileEntity.cpp  TileEntity.h  TileEntityChest.h  TileEntityFurnace.h  TileEntitySign.h  World.cpp  World.h
src/world/biome/: MobSpawnerBase.h  WorldChunkManager.h
src/world/noise/: AlphaNoise.h  NoiseGenerator2.h  NoiseGeneratorOctaves.h  NoiseGeneratorOctaves2.h
src/world/path/: Pathfinder.h
test/: CMakeLists.txt  TestAxisAlignedBB.cpp  TestBlockInit.cpp  TestByteBuffer.cpp  TestChunk.cpp  TestCodeQuality.cpp  TestConsoleCommands.cpp  TestGlobalInit.cpp  TestItemStack.cpp  TestJavaRandom.cpp  TestLegacyAndNBTFallbacks.cpp  TestMaterial.cpp  TestMathHelper.cpp  TestNBT.cpp  TestNibbleArray.cpp  TestNoise.cpp  TestPacket.cpp  TestPathfinder.cpp  TestVec3D.cpp
